--- a/crazyOCR-v2.ipynb
+++ b/crazyOCR-v2.ipynb
@@ -439,6 +439,7 @@
     "    print(f\"Starting OCR pipeline on: {book_dir}\")\n",
     "    start_time = time.time()\n",
     "\n",
+    "    profile = get_processing_profile()\n"
     "    batch_process_book(book_dir, out_dir, max_workers=profile[\"batch_size\"], preview=True)\n",
     "\n",
     "    print(f\"OCR Pipeline complete in {time.time() - start_time:.2f} sec\")"
